| Summary: | ASTERISK-29842: Do not change 180 Ringing to 183 Progress even if early_media already enabled | ||
| Reporter: | Mark Petersen (asterisk.org@zombie.dk) | Labels: | |
| Date Opened: | 2022-01-06 13:25:25.000-0600 | Date Closed: | 2022-04-26 16:37:25 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currently if we receive a 180 Ringing and we previously have received a 183 Progress with SDP, asterisk is send as 183 Progress with SDP
but it should be send as 180 Ringing with SDP RFC-3960 3.2. Ringing Tone Generation SIP User Agent (UA) could implement the following local policy: 1. Unless a 180 (Ringing) response is received, never generate local ringing. 2. If a 180 (Ringing) has been received but there are no incoming media packets, generate local ringing. 3. If a 180 (Ringing) has been received and there are incoming media packets, play them and do not generate local ringing. Note that a 180 (Ringing) response means that the callee is being alerted, and a UAS should send such a response if the callee is being alerted, regardless of the status of the early media session. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-01-06 13:25:26.515-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Mark Petersen (asterisk.org@zombie.dk) 2022-01-06 13:44:32.128-0600 this issue is a large problem if you have an asterisk PBX with an asterisk GW in front and the GW first receive an 183 Progress with SDP and thereafter receive and 180 Ringing, the asterisk PBX will not receive any 180 Ringing preventing AMI from indicating that the remote endpoint is Ringing By: Mark Petersen (asterisk.org@zombie.dk) 2022-01-06 13:45:47.093-0600 https://community.asterisk.org/t/180-ringing-after-183-progress-is-not-passed-on-to-the-caller/91126 By: Mark Petersen (asterisk.org@zombie.dk) 2022-02-01 04:44:49.058-0600 relatet to (Abandoned) * ASTERISK-25568 * https://gerrit.asterisk.org/c/asterisk/+/1696/ By: Friendly Automation (friendly-automation) 2022-04-26 16:37:26.574-0500 Change 17785 merged by Friendly Automation: chan_pjsip: add allow_sending_180_after_183 option [https://gerrit.asterisk.org/c/asterisk/+/17785|https://gerrit.asterisk.org/c/asterisk/+/17785] By: Friendly Automation (friendly-automation) 2022-04-26 16:38:00.285-0500 Change 18449 merged by Friendly Automation: chan_pjsip: add allow_sending_180_after_183 option [https://gerrit.asterisk.org/c/asterisk/+/18449|https://gerrit.asterisk.org/c/asterisk/+/18449] By: Friendly Automation (friendly-automation) 2022-04-26 16:49:43.426-0500 Change 18450 merged by Kevin Harwell: chan_pjsip: add allow_sending_180_after_183 option [https://gerrit.asterisk.org/c/asterisk/+/18450|https://gerrit.asterisk.org/c/asterisk/+/18450] By: Friendly Automation (friendly-automation) 2022-04-26 16:50:05.607-0500 Change 18451 merged by Kevin Harwell: chan_pjsip: add allow_sending_180_after_183 option [https://gerrit.asterisk.org/c/asterisk/+/18451|https://gerrit.asterisk.org/c/asterisk/+/18451] By: Vit Bohacek (Cofein) 2022-11-30 08:23:17.822-0600 Hello, this patch doesn't solve the case when Ringing comes with SDP in it's body. I use asterisk 18.14.0 it is necessary to add ast_sip_get_allow_sending_180_after_183() condition into chan_pjsip_incoming_response - chan_pjsip.c <inline patch removed> By: Joshua C. Colp (jcolp) 2022-11-30 08:29:50.820-0600 [~Cofein] I have removed your inline patch, as we don't allow them. Additionally this issue is NOT regarding the reception/handling of incoming. The patch, and option, was for Asterisk sending it. A new issue should be created, and the same option shouldn't be used - because it is not for controlling the behavior you are referring to. | ||